2009-10-15  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsdigi.c, ax25.c, Makefile.in:
	    Remove obsolete placeholder.  Things will be done differently.

	* config.c, rfbeacon.c:
	    The rfbeacon code will be doing all variants of beacons..

	* interface.c, netax25.c, ttyreader.c, aprx.h, ax25.c:
	    interface_transmit_ax25() is able to transmit a fully formed
	    AX.25 header+control+body frame to Linux internal AX.25 network
	    devices as well as to any serial port attached KISS device.
	    Transmission to TNC2 devices is not supported.
	    Code is also very careful on checking the AX.25 frame header
	    structure, and rejecting outright any with invalid header
	    structure (bad continuation flags, bad chars in callsigns,
	    not so careful with SSID byte contents - too many are careless
	    with those :-( )

2009-10-14  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* rfbeacon.c, interface.c, Makefile.in, config.c, aprx.c,
	  aprx.h, aprx.conf.in, aprsis.c, netbeacon.c:
	    Add a stub of rfbeacon.

2009-10-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, config.c, netax25.c, ttyreader.c, ax25.c,
	  aprx.h, ChangeLog:
	    Feed received AX.25 frames to interface layer for possible
	    digipeat processing.  (Missing: APRSIS originated frames!)

	* interface.c, ttyreader.c, aprx.h, aprx.conf.in, aprx.8.in:
	    Remodelled serial-device definitions into interface layer.
	    Documentation updates to match new system.

2009-10-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c, aprx.h, config.c, netbeacon.c, aprx.conf.in,
	  VERSION, README, INSTALL, TODO:
	    <aprsis> interface config with new style entry.
	    More of <interface> definitions.
	    Experiments at aprx.conf.in writing.


	* Makefile.in, aprx.8.in, aprx.conf.in, aprx.h, config.c,
	  filter.c, interface.c, netax25.c, netbeacon.c, pbuf.c,
	  pbuf.h, ttyreader.c:
	    Incremental work on new style of configurations