@@ -229,6 +229,7 @@ int main(int argc, char *const argv[])
 		i = erlang_prepoll(&app);
 		i = telemetry_prepoll(&app);
 		i = dupecheck_prepoll(&app);
+		i = digipeater_prepoll(&app);
 
 		if (app.next_timeout <= now)
 			app.next_timeout = now + 1;	/* Just to be on safe side.. */
@@ -246,6 +247,7 @@ int main(int argc, char *const argv[])
 		i = erlang_postpoll(&app);
 		i = telemetry_postpoll(&app);
 		i = dupecheck_postpoll(&app);
+		i = digipeater_postpoll(&app);
 
 	}
 
